public/stylesheets/style.css
@font-face { font-family: Harabara; src: url('/fonts/Harabara.ttf'); } 

html, body, * {
  list-style: none;
  padding: 0;
  margin: 0;
  text-decoration: none;
}

body {
  background: white url(/images/bg.gif) repeat;
  color: white;
  font: normal normal normal 12px/1.4em 'Trebuchet MS', Arial, sans-serif;
  font-weight: normal;
  line-height: 1.8em;
}

a, a:link, a:hover, a:visited {
  color: #FFF;
}

.bg img {
  left: 0px;
  opacity: 0.9;
  position: fixed;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: -50;
}

#body {
  width: 100%;
  margin-bottom: 20px;
  background: #4C9867;
}

.social {
  width: auto;
}

.wrapper {
  width: 940px;
  margin: 0 auto;
  padding: 20px;
}

.clear {
  clear: both;
}

.helpWithAndFindOrg, .bucket, .actions a {
  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
}

/* header */
header .wrapper h1#logo {
  width: 195px; 
  height: 160px;
  position: relative;
  float: left;
}

header .wrapper h1#logo a {
  background: url(/images/logo.png);
  position: absolute;
  width: 100%;
  height: 100%;
}

header .wrapper .locale {
  float: right;
}

header div.slogan {
  max-width: 710px;
  font-style: italic;
  background: rgb(61,61,61);
  background: rgba(51,51,51,0.7);
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  padding: 10px;
  font-weight: normal;
  font-size: 1.95em;
  line-height: 1.3em;
}

header .social {
  float: right;
  margin-top: 20px;
}

header .social ul {
  float: right;
}

header .social li {
  float: left;
  padding: 0 0 0 20px;
}

header .social li a {
  color: #FFF !important;
  text-shadow: #000 1px 1px 2px;
}

header .social li a:hover {
  border-bottom: #FFF dotted 1px;
  color: #FFF !important;
}

.forum, .twitter, .flickr {
  padding-left: 20px;
}

/* #body */
#body {
  background: none;
}

#body .wrapper.helpWithAndFindOrg {
  background-color: #74557F;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

#body .wrapper.helpWithAndFindOrg h2, h3 {
  font-size: 3.1em;
  font-family: "Harabara", Trebuchet MS, Arial, sans-serif;
  letter-spacing: 0.15em;
  margin-bottom: 10px;
  text-shadow: 1px 1px 1px #000;
}

h2.successfulAdded {
  color: #D64765;
}

h3 {
  font-size: 2.5em;
  color: #555;
}

h4 {
  margin-bottom: 20px;
  font-style: italic;
  background: url(/images/arrow.gif) no-repeat left center;
  padding-left: 15px;
}

/* form */
.helpWith {
  margin-bottom: 20px;
}

.helpWith label, #list_tags label {
  float: left;
  margin-right: 20px;
}

.helpWith input {
  margin-right: 10px;
}

.helpWith input:last-child {
  margin-right: 0;
}

input.cityOrOrg, input#search {
  padding: 10px;
  font-size: 2.3em;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
}

input.cityOrOrg {
  width: 760px;
}

input#search {
  margin-left: 16px;
  width: 140px;
}

input#search:hover {
  cursor: pointer;
  background: #BBF968;
}

#search_help_message {
    color: white;
    text-align: left;
    font-size: 10px;
}

/* featuredOrg */

.featuredOrg .bucket, 
.orgDescription,
.register,
.editOrg {
  background: #EDEDED;
  color: #333;
  width: 280px;
  float: left;
  margin: 0 20px 20px 0;
  padding: 10px;
}

.featuredOrg .bucket h3 {
  background: none;
}

.featuredOrg .bucket h4 {
  font-size: 1.3em;
  padding: 0;
  background: none;
}

.featuredOrg .bucket.last {
  margin: 0;
}

.featuredOrg .bucket a {
  color: #333;
}

/* actions */

.actions a {
  background: #74557F;
  padding: 5px 10px;
  float: right;
  margin-left: 20px;
  font-size: 1.5em;
}

.actions a:hover {
  background: #7f5d8b;
}

/* footer */
footer {
  background: #333;
  margin-top: 40px;
}

footer .wrappper {
  
}

small.letsHelpIt {
  float: left;
}

small.letsHelpIt strong {
  border-bottom: dashed 1px #FFF;
}

small.free {
  float: right;
}



/* Internal pages */

.orgDescription,
.register,
.editOrg {
  width: 900px;  
  position: relative;
}

.register h3, 
.orgDescription h3,
.editOrg h3 {
  margin: -20px -20px 40px -20px;
  padding: 20px;
  background: #F5F5F5;
  border-bottom: 3px solid #F9F9F9;  
}

.orgDescription h3 div {
  background: url(/images/arrow.gif) no-repeat left center;
  padding-left: 15px;
  font-family: 'Trebuchet MS';
  font-size: 0.5em;
  margin-top: 10px;
  text-shadow: none;
  color: #333;
}

.orgDescription a.edit {
  color: red;
} 
.orgDescription a.edit:hover {
  border-bottom: 1px dotted red;  
}
.orgDescription a.share {
  color: #3CF;
}

.orgDescription a.share:hover {
  background: #3CF;
  color: white;
}

.orgDescription, .register, .editOrg {
  padding: 20px;
}

/*form */

label {
  font-size: 1.25em;
  display: block;
  margin-bottom: 5px;
}

#list_tags label {
  font-size: 1em;
}

input, textarea {
  border: none;
  padding: 5px;
  margin-bottom: 10px;
}

textarea {
  margin-bottom: 0;
  width: 400px;
  height: 200px;
}
.textarea {
  margin-bottom: -5px;
}

.smoothText {
  font-size: 1em;
  font-style: italic;
}

.orgInfo, 
.announcerInfo {
  width: 420px;
}

.orgInfo {
  float: left;
  border-right: 2px dotted #F9F9F9;
  padding-right: 20px;
}

.announcerInfo {
  float: right;
  padding-left: 20px;
}

.btnSubmit {
  clear: both;
}

input#organization_submit {
  background: #333;
  color: #F9F9F9;
  padding: 5px 40px;
  bottom: 10px;
  right: 20px;
  position: absolute;
  text-transform: uppercase;
  font-size: 1.5em;
}

input#organization_submit:hover {
  background: #777;
  cursor: pointer;
}

.waysOfContact, .tags {
  float: left;
  margin-right: 20px;
  margin-bottom: 10px;
}

.waysOfContact strong, 
.tags strong,
.needs strong {
  font-size: 1.2em;
}

.needs {
  clear: both;
}

.tools {
  margin-top: 20px;
}

.password {
  margin: 0 auto;
  padding: 20px;
  width: 230px;
  border: 1px #666 dotted;
  background: #FFF;
}

#pass_field {
  background: #777;
  color: #FFF;
}

.passSubmit {
  background: #333;
  color: #F9F9F9;
  margin-left: 5px;
}

.passSubmit:hover {
  background: #777;
  cursor: pointer;
}

